<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_image2"
    tools:context="com.cs442.group7.eventiit.LogIn">

    <TextView
        android:id="@+id/text_iit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_iit"
        android:textSize="50sp"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_event"
        android:textSize="40sp"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_iit" />

    <RelativeLayout
        android:id="@+id/input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textCursorDrawable="@color/white"
            android:textSize="22sp"
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-condensed"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textCursorDrawable="@color/white"
            android:textSize="22sp"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:padding="10dp"
            android:inputType="textPassword"
            android:gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:layout_below="@id/input_email"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>


    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_background2"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/input_layout"
        android:fontFamily="sans-serif-smallcaps" />

    <Button
        android:id="@+id/button_google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_in"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_background2"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_below="@+id/button_sign_in" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps" />

</RelativeLayout>
