<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_image2"
    tools:context="com.cs442.group7.eventiit.SignUp">

    <TextView
        android:id="@+id/text_iit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_iit"
        android:textSize="50sp"
        android:fontFamily="serif"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_event"
        android:textSize="40sp"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_iit" />

    <RelativeLayout
        android:id="@+id/input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:id="@+id/user_full_name"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_first_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColorHint="#424242"
                android:gravity="center"
                android:textSize="22sp"
                android:drawableLeft="@drawable/ic_person"
                android:drawableStart="@drawable/ic_person"
                android:inputType="text"
                android:textColor="@color/black"
                android:background="@drawable/input_background_fname"
                android:padding="8dp"
                android:fontFamily="sans-serif-condensed" />

            <EditText
                android:id="@+id/input_last_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColorHint="#424242"
                android:gravity="center"
                android:inputType="text"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:background="@drawable/input_background_lname"
                android:padding="8dp"
                android:fontFamily="sans-serif-condensed" />

        </LinearLayout>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="#424242"
            android:textSize="22sp"
            android:drawableLeft="@drawable/ic_mail"
            android:drawableStart="@drawable/ic_mail"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:background="@drawable/input_background1"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/user_full_name"
            android:fontFamily="sans-serif-condensed" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#424242"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/input_background1"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/input_email"
            android:fontFamily="sans-serif-condensed" />


    </RelativeLayout>



    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_background2"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_below="@id/input_layout"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_background2"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_alignParentBottom="true"/>

<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background2"
            android:fontFamily="sans-serif-smallcaps" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background2"
            android:fontFamily="sans-serif-smallcaps" />


    </LinearLayout>-->

</RelativeLayout>
